--- a/GBSipClient/GBSipClient.vcxproj
+++ b/GBSipClient/GBSipClient.vcxproj
@@ -13,7 +13,7 @@
   <PropertyGroup Label="Globals">
     <ProjectGuid>{B12702AD-ABFB-343A-A199-8E24837244A3}</ProjectGuid>
     <Keyword>Qt4VSv1.0</Keyword>
-    <WindowsTargetPlatformVersion>8.1</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>10.0.17134.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
@@ -87,7 +87,7 @@
     <ClCompile>
       <MultiProcessorCompilation>true</MultiProcessorCompilation>
       <PreprocessorDefinitions>UNICODE;_UNICODE;WIN32;WIN64;QT_DLL;QT_NO_DEBUG;NDEBUG;QT_CORE_LIB;QT_GUI_LIB;QT_WIDGETS_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>.\GeneratedFiles;.;$(QTDIR)\include;.\GeneratedFiles\$(ConfigurationName);$(QTDIR)\include\QtCore;$(QTDIR)\include\QtGui;$(QTDIR)\include\QtANGLE;$(QTDIR)\include\QtWidgets;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\include;.\GeneratedFiles;.;$(QTDIR)\include;.\GeneratedFiles\$(ConfigurationName);$(QTDIR)\include\QtCore;$(QTDIR)\include\QtGui;$(QTDIR)\include\QtANGLE;$(QTDIR)\include\QtWidgets;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <DebugInformationFormat />
       <RuntimeLibrary>MultiThreadedDLL</RuntimeLibrary>
       <TreatWChar_tAsBuiltInType>true</TreatWChar_tAsBuiltInType>
@@ -95,14 +95,14 @@
     <Link>
       <SubSystem>Windows</SubSystem>
       <OutputFile>$(OutDir)\$(ProjectName).exe</OutputFile>
-      <AdditionalLibraryDirectories>$(QTDIR)\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>E:\MyProject\GBSipClient\x64\Release;$(QTDIR)\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <GenerateDebugInformation>false</GenerateDebugInformation>
-      <AdditionalDependencies>qtmain.lib;Qt5Core.lib;Qt5Gui.lib;Qt5Widgets.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>PlayCtrl.lib;osip2.lib;osipparser2.lib;qtmain.lib;Qt5Core.lib;Qt5Gui.lib;Qt5Widgets.lib;ws2_32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <QtMoc>
       <OutputFile>.\GeneratedFiles\$(ConfigurationName)\moc_%(Filename).cpp</OutputFile>
       <ExecutionDescription>Moc'ing %(Identity)...</ExecutionDescription>
-      <IncludePath>.\GeneratedFiles;.;$(QTDIR)\include;.\GeneratedFiles\$(ConfigurationName);$(QTDIR)\include\QtCore;$(QTDIR)\include\QtGui;$(QTDIR)\include\QtANGLE;$(QTDIR)\include\QtWidgets;%(AdditionalIncludeDirectories)</IncludePath>
+      <IncludePath>..\include;.\GeneratedFiles;.;$(QTDIR)\include;.\GeneratedFiles\$(ConfigurationName);$(QTDIR)\include\QtCore;$(QTDIR)\include\QtGui;$(QTDIR)\include\QtANGLE;$(QTDIR)\include\QtWidgets;%(AdditionalIncludeDirectories)</IncludePath>
       <Define>UNICODE;_UNICODE;WIN32;WIN64;QT_DLL;QT_NO_DEBUG;NDEBUG;QT_CORE_LIB;QT_GUI_LIB;QT_WIDGETS_LIB;%(PreprocessorDefinitions)</Define>
     </QtMoc>
     <QtUic>
@@ -115,7 +115,7 @@
     </QtRcc>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="DBServer.cpp" />
+    <ClCompile Include="SipDBServer.cpp" />
     <ClCompile Include="GBSipClient.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="SipCallback.cpp" />
@@ -124,12 +124,13 @@
     <ClCompile Include="SipDialogMgr.cpp" />
     <ClCompile Include="SipLog.cpp" />
     <ClCompile Include="SipMsgBodyParser.cpp" />
+    <ClCompile Include="SipMsgXmlBody.cpp" />
     <ClCompile Include="SipRtspBodyParser.cpp" />
     <ClCompile Include="SipSdpBodyParser.cpp" />
     <ClCompile Include="SipSocketServer.cpp" />
-    <ClCompile Include="SipXmlBodyParser.cpp" />
     <ClCompile Include="SipMsgHeaderParser.cpp" />
     <ClCompile Include="SipMsgObj.cpp" />
+    <ClCompile Include="SipUtilities.cpp" />
     <ClCompile Include="tinyxml2.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -142,7 +143,7 @@
     <QtRcc Include="GBSipClient.qrc" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="DBServer.h" />
+    <ClInclude Include="SipDBServer.h" />
     <ClInclude Include="otlv4.h" />
     <ClInclude Include="SipCallback.h" />
     <ClInclude Include="SipMgr.h" />
@@ -151,12 +152,13 @@
     <ClInclude Include="SipDialogMgr.h" />
     <ClInclude Include="SipLog.h" />
     <ClInclude Include="SipMsgBodyParser.h" />
+    <ClInclude Include="SipMsgXmlBody.h" />
     <ClInclude Include="SipRtspBodyParser.h" />
     <ClInclude Include="SipSdpBodyParser.h" />
     <ClInclude Include="SipSocketServer.h" />
-    <ClInclude Include="SipXmlBodyParser.h" />
     <ClInclude Include="SipMsgHeaderParser.h" />
     <ClInclude Include="SipMsgObj.h" />
+    <ClInclude Include="SipUtilities.h" />
     <ClInclude Include="tinyxml2.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
